[package]
name = "match-wrap"
description = "Wrap incompatible match arms with a trait object container"
authors = ["Callum Leslie <git@cleslie.uk>"]
version = "0.1.0"
edition = "2024"
documentation = "https://docs.rs/match-wrap"
homepage = "https://github.com/callumio/match-wrap"
repository = "https://github.com/callumio/match-wrap"
readme = "README.md"
license = "MIT"
keywords = []
categories = []
exclude = ["flake.nix", "flake.lock", ".envrc"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", default-features = false, features = [
  "full",
  "parsing",
  "proc-macro",
  "printing",
] }

[lib]
proc-macro = true
